feat(freelancers): handlers for freelancers are implemented
